[workspace]
members = [
    "./crates/storage"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Andres Pirela", "SchemaJS Authors"]
description = "Blazingly fast, decentralized P2P data-sharing in Rust, designed for an intuitive developer experience and seamless integration."
edition = "2021"
license = "MIT"

[workspace.dependencies]
dashmap = { version = "6.1.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
memmap2 = "0.9.4"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.4"
serde_json = "1.0.134"
enum-as-inner = "0.6.1"
thiserror = "2.0.9"


[profile.dind]
inherits = "dev"

[profile.no-debug-assertions]
inherits = "dev"
debug-assertions = false

[profile.release]
lto = true

[env]
RUST_BACKTRACE = "1"