[package]
name = "shugart_storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
resolver = "2"

[dependencies]
dashmap.workspace = true
memmap2.workspace = true
tokio.workspace = true
uuid.workspace = true
serde_json.workspace = true
serde.workspace = true
enum-as-inner.workspace = true
thiserror.workspace = true